--- a/client/pom.xml
+++ b/client/pom.xml
@@ -25,6 +25,13 @@
 			<artifactId>grpc-stub</artifactId>
 			<version>1.15.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.grpc/grpc-all -->
+		<dependency>
+		    <groupId>io.grpc</groupId>
+		    <artifactId>grpc-all</artifactId>
+		    <version>1.41.0</version>
+		</dependency>
+		
 		
 		<dependency>
 		    <groupId>javax.annotation</groupId>
